@@ -1,8 +1,15 @@
 package ru.yandex.practicum.service;
 
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import ru.yandex.practicum.dto.user.NewUserRequestDto;
+import ru.yandex.practicum.dto.user.UserShortDto;
 import ru.yandex.practicum.mapper.UserMapper;
 import ru.yandex.practicum.dto.user.UserFullDto;
 import ru.yandex.practicum.exception.model.ConflictException;
@@ -11,38 +18,44 @@ import ru.yandex.practicum.model.User;
 import ru.yandex.practicum.repository.UserRepository;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
+@Slf4j
 public class UserService {
 
     private final UserRepository userRepository;
+    private final UserMapper userMapper;
 
     @Autowired
-    public UserService(UserRepository userRepository) {
+    public UserService(UserRepository userRepository, UserMapper userMapper) {
         this.userRepository = userRepository;
+        this.userMapper = userMapper;
     }
 
-    public List<UserFullDto> getUsers(List<Long> usersId, Pageable pageable) {
-        if (usersId == null) {
-            return userRepository.findAll(pageable).stream()
-                    .map(UserMapper::toUserDtoFromUser).toList();
-        } else {
-            return userRepository.findAllByIdIn(usersId, pageable).stream()
-                    .map(UserMapper::toUserDtoFromUser).toList();
-        }
+    @Transactional(readOnly = true)
+    public List<UserFullDto> getUsers(List<Long> ids, int from, int size) {
+        log.info("Получение пользователей. IDs: {}, from: {}, size: {}", ids, from, size);
+        Pageable pageable = PageRequest.of(from / size, size, Sort.by("id"));
+        Page<User> userPage = userRepository.findAllByIdIn(ids, pageable);
+        return userPage.getContent().stream()
+                .map(userMapper::toUserFullDto)
+                .collect(Collectors.toList());
     }
 
-    public UserFullDto getUser(long userId) {
-        return UserMapper.toUserDtoFromUser(getUserIfExist(userId));
+    @Transactional(readOnly = true)
+    public UserShortDto getUser(Long userId) {
+        return UserMapper.fromUserToUserShortDto(userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("Пользователь не найден")));
     }
 
-    public UserFullDto addUser(UserFullDto userFullDto) {
-        Optional<User> userWithSameName = userRepository.findByName(userFullDto.getName());
+    public UserFullDto addUser(NewUserRequestDto newUserRequestDto) {
+        Optional<User> userWithSameName = userRepository.findByName(newUserRequestDto.getName());
         if (userWithSameName.isPresent()) {
-            throw new ConflictException("User " + userFullDto.getName() + " уже существует!");
+            throw new ConflictException("User " + newUserRequestDto.getName() + " уже существует!");
         }
 
-        return UserMapper.toUserDtoFromUser(userRepository.save(UserMapper.toUserFromUserDto(userFullDto)));
+        return UserMapper.toUserDtoFromUser(userRepository.save(UserMapper.toUserFromUserDto(newUserRequestDto)));
     }
 
     public void deleteUser(long userId) {
